# aegis

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  smithery.yaml
src/aegis/: cli.py  config.py  llm.py  mcp_server.py  web.py
src/aegis/alerting/: __init__.py  pipeline.py
src/aegis/capture/: __init__.py  kernel_net.py  live.py  pcap_buffer.py  reader.py
src/aegis/detection/: analyzer.py  cadence.py  rules.py
src/aegis_ids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_alpha.py
ui/: go.mod  main.go
